examples/good/13-NestedFun.tms
int a(int x) {

  int y = 2;
  int someNestedFun(int z) {
    return x + y + z;
  }
  return someNestedFun(3);
}

void main() {
  printInt(a(1));
  printBool(a(1) == 6);
  return;
}