examples/bad/06-VoidArgType.tms
int fun(void x) {
  return 2;
}

void voidFun() {
  return;
}

void main() {
  int l = fun(voidFun());
  return;
}